--- a/A3-LogEqNormForm.ipynb
+++ b/A3-LogEqNormForm.ipynb
@@ -169,7 +169,7 @@
    "metadata": {},
    "source": [
     "### 3: Sum of Products (Minterms) and Product of Sums (Maxterms)    \n",
-    "For this exercise, you will be given the line numbers of the minterms and maxterms. Use SymPy to determine what the SOP Form is and what the POS form is.\n",
+    "For this exercise, you will be given the line numbers of the minterms and maxterms. Use SymPy to determine what the SOP Form is for 1-3 and what the POS form is for 4 and 5.\n",
     "1. Minterms: 0, 1, 2, 3, 6, 7, 8, 9, 10, 11, 14, 15\n",
     "2. Minterms: 0, 1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15\n",
     "3. Minterms: 0, 1, 2, 3, 8, 9, 10, 11\n",
