Fixed wording on A5

--- a/A5-Quantifiers.ipynb
+++ b/A5-Quantifiers.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "source": [
     "Demonstrate nested quantifiers. Create functions:\n",
-    "1. Predicate 1: tests if a number is true\n",
+    "1. Predicate 1: tests if a number is even\n",
     "2. Predicate 2: tests if a number is positive\n",
     "\n",
     "Create two domains:    \n",
