Updated inferences assignment

--- a/A6-Inferences.ipynb
+++ b/A6-Inferences.ipynb
@@ -35,7 +35,10 @@
     "Modus Ponens: If p implies q, and p is true, then q is true.    \n",
     "Premise 1: Implies(p, q)    \n",
     "Premise 2 (p is true): p    \n",
-    "Conclusion (q is true): q    "
+    "Conclusion (q is true): q \n",
+    "\n",
+    "Some hints for this assignment:    \n",
+    "Your goal is to create conditions to ensure that the expressions that you pass into the function are exactly what is needed. For modus ponens, you need exactly premise1 = Implies(p, q) and premise2 = p. Be careful here, you cannot use a condition like if premise1 and premise2:, becuase then any premises will be accepted. Look up the Python isinstance() function similar to what is shown in the Modus Ponens function below. You may need additional conditions to ensure what is passed in the only expressions that will work for that rule. Test your functions by passing in incorrect expressions and seeing what they return."
    ]
   },
   {
@@ -63,6 +66,10 @@
     "\n",
     "def modus_ponens(premise1, premise2):\n",
     "    \"\"\"Modus Ponens: If p implies q, and p is true, then q is true.\"\"\"\n",
+    "    if premise2 and isinstance(premise1, Implies):\n",
+    "        if premise1.args[0] == premise2:\n",
+    "            return premise1.args[1]\n",
+    "    return None\n",
     "    \n",
     "\n",
     "def modus_tollens(premise1, premise2):\n",
