Updated problems so they matched comments

--- a/A1-PropositionalLogic.ipynb
+++ b/A1-PropositionalLogic.ipynb
@@ -12,9 +12,9 @@
    "metadata": {},
    "source": [
     "### 1: Convert the following into logic notation using Python with SymPy. Use both standard notation and using function calls such as Or, And, Implies format as well.\n",
-    "1. y or (x and y)\n",
+    "1. y or (not x and y)\n",
     "2. a implies b\n",
-    "3. (m or n) and (r or s)"
+    "3. (m or not n) and (r or not s)"
    ]
   },
   {
@@ -97,7 +97,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. y | x\n"
+    "# 1. y | x, y = False, x = True\n",
+    "\n",
+    "# Substitute the given values y = False and x = True into the expression"
    ]
   },
   {
