uploading finished versions of the first two assignments

--- a/A0-PythonReview.ipynb
+++ b/A0-PythonReview.ipynb
@@ -22,12 +22,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "BQybla17FRh5"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "My name is Kayla Rieck\n",
+            "I am a student at North Seattle College.\n"
+          ]
+        }
+      ],
+      "source": [
+        "my_name = 'Kayla Rieck'\n",
+        "print(f\"My name is {my_name}\\nI am a student at North Seattle College.\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -41,12 +53,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "P7QDyWncFRh8"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "My phone number is 5556667777\n"
+          ]
+        }
+      ],
+      "source": [
+        "phone = 5556667777\n",
+        "print(f\"My phone number is {phone}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -60,12 +83,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "OnOau948FRh9"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hello my name is Kayla Rieck and my phone number is 555-666-7777\n"
+          ]
+        }
+      ],
+      "source": [
+        "phone = \"555-666-7777\"\n",
+        "name = \"Kayla Rieck\"\n",
+        "print(f\"Hello my name is {name} and my phone number is {phone}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -80,12 +115,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "5x2rIFzRFRh9"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "I graduate in October of 2026.\n"
+          ]
+        }
+      ],
+      "source": [
+        "month, year = \"October\", \"2026\"\n",
+        "print(f\"I graduate in {month} of {year}.\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -107,12 +153,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "OkyeAVPXFRh-"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "58.5\n"
+          ]
+        }
+      ],
+      "source": [
+        "ans = 12 * 5 - 3 / 2\n",
+        "print(ans)\n",
+        "# Ans is a floating point number"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -134,12 +192,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "Lo-LEy8bKYmG"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "31 days\n"
+          ]
+        }
+      ],
+      "source": [
+        "var = \"October\"\n",
+        "if var == \"October\":\n",
+        "    print(\"31 days\")\n",
+        "else:\n",
+        "    print(\"30 days\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -155,12 +227,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "qscUkh813QKH"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Between 100 and 150\n"
+          ]
+        }
+      ],
+      "source": [
+        "var = 140\n",
+        "if var > 150:\n",
+        "    print(\"Greater than 150\")\n",
+        "elif var > 100:\n",
+        "    print(\"Between 100 and 150\")\n",
+        "else:\n",
+        "    print(\"Less than 100\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -175,12 +263,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "1vxg4nMbFRh_"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Number is divisible by 5 and 10\n",
+            "Number is divisible by 7 or 2\n"
+          ]
+        }
+      ],
+      "source": [
+        "var = 70\n",
+        "if var % 5 == 0 and var % 10 == 0:\n",
+        "    print(\"Number is divisible by 5 and 10\")\n",
+        "if var % 7 == 0 or var % 2 == 0:\n",
+        "    print(\"Number is divisible by 7 or 2\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -193,12 +296,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "JY_Ci5v-FRiA"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "7\n",
+            "14\n",
+            "21\n",
+            "28\n",
+            "35\n",
+            "42\n",
+            "49\n",
+            "56\n",
+            "63\n",
+            "70\n",
+            "77\n",
+            "84\n",
+            "91\n",
+            "98\n"
+          ]
+        }
+      ],
+      "source": [
+        "for i in range(100):\n",
+        "    if i % 7 == 0:\n",
+        "        print(i)\n",
+        "\n",
+        "# And again with a one-line list comprehension\n",
+        "# [print(i) for i in range(0, 100, 7)]"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -211,12 +343,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "4a1D64hpFRiA"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3 6 9 \n",
+            "18\n"
+          ]
+        }
+      ],
+      "source": [
+        "i = 1\n",
+        "sum = 0\n",
+        "while i <= 10:\n",
+        "    if i % 3 == 0:\n",
+        "        print(i, end = \" \")\n",
+        "        sum += i\n",
+        "    i = i+1\n",
+        "print(f\"\\n{sum}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -239,12 +389,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "ntBnYxzi1RPc"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Set: 1\n",
+            "Set: 2\n",
+            "Student 1\n",
+            "Student 2\n",
+            "Student 3\n",
+            "Student 4\n",
+            "Student 5\n",
+            "Set: 3\n",
+            "Set: 4\n",
+            "Student 1\n",
+            "Student 2\n",
+            "Student 3\n",
+            "Student 4\n",
+            "Student 5\n",
+            "Set: 5\n"
+          ]
+        }
+      ],
+      "source": [
+        "for i in range(1,6):\n",
+        "    print(f\"Set: {i}\")\n",
+        "    if i % 2 == 0:\n",
+        "        for j in range(1,6):\n",
+        "            print(f\"Student {j}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -257,12 +435,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "lppms8ctzfRI"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Invisible\n",
+            "Academy\n",
+            "y\n"
+          ]
+        }
+      ],
+      "source": [
+        "school = \"Invisible Academy\"\n",
+        "first = school[:9]\n",
+        "second = school[10:]\n",
+        "print(first)\n",
+        "print(second)\n",
+        "print(school[-1])"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -278,12 +473,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "zw2NezoM0zfl"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Thor is a character in the Marvel Cinematic Universe. She-Hulk is a character in the Marvel Cinematic Universe. Loki is a character in the Marvel Cinematic Universe. "
+          ]
+        }
+      ],
+      "source": [
+        "chars = [\"Thor\",\"She-Hulk\",\"Loki\"]\n",
+        "for char in chars:\n",
+        "    print(f\"{char} is a character in the Marvel Cinematic Universe.\", end = \" \")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -297,12 +504,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "rbyZif9a1b2V"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "January has 31 days in it.\n",
+            "February has 28 days in it.\n",
+            "March has 31 days in it.\n",
+            "April has 30 days in it.\n",
+            "May has 31 days in it.\n",
+            "June has 30 days in it.\n"
+          ]
+        }
+      ],
+      "source": [
+        "months = [\n",
+        "    [\"January\", 31],\n",
+        "    [\"February\", 28],\n",
+        "    [\"March\", 31],\n",
+        "    [\"April\", 30],\n",
+        "    [\"May\", 31],\n",
+        "    [\"June\", 30]\n",
+        "]\n",
+        "\n",
+        "for i in range(len(months)):\n",
+        "    print(f\"{months[i][0]} has {months[i][1]} days in it.\")\n",
+        "\n",
+        "#for month, month_days in months:\n",
+        "#    print(f\"{month} has {month_days} days in it.\")\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -319,12 +555,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "id": "p0YE0nqs4Hcz"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'Breed': 'Corgi', 'Age Exp.': 13, 'Type': 'Cattle herding'}\n",
+            "Corgi\n",
+            "The Corgi is expected to live about 13 years.\n"
+          ]
+        }
+      ],
+      "source": [
+        "dog = {'Breed': 'Corgi', 'Age Exp.': 13, 'Type': 'Cattle herding'}\n",
+        "print(dog)\n",
+        "print(dog['Breed'])\n",
+        "print(f\"The {dog['Breed']} is expected to live about {dog['Age Exp.']} years.\")"
+      ]
     }
   ],
   "metadata": {
@@ -346,7 +597,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.4"
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
