added some light comments as instructed

--- a/A1-PropositionalLogic.ipynb
+++ b/A1-PropositionalLogic.ipynb
@@ -55,7 +55,21 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle y \\vee \\left(y \\wedge \\neg x\\right)$"
+      ],
+      "text/plain": [
+       "y | (y & ~x)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1b. y or (not x and y) function calls\n",
     "Or(y,(And(Not(x),y)))"
@@ -63,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,13 +89,14 @@
        "Implies(a, b)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 2b. a implies b function calls\n",
+    "a, b = symbols(\"a, b\")\n",
     "Implies(a,b)\n"
    ]
   },
@@ -247,6 +262,7 @@
    "source": [
     "from sympy.logic.boolalg import truth_table\n",
     "\n",
+    "# helper function for printing a truth table, given a sympy expression and the relevant propositions\n",
     "def print_truth_table(expression, props):\n",
     "    table = truth_table(expression, props)\n",
     "    for prop in props:\n",
@@ -277,6 +293,7 @@
    ],
    "source": [
     "#  Conjunction Truth Table\n",
+    "#  Conjuction is only true when both propositions are true\n",
     "props = x, y = symbols('x, y')\n",
     "expr = x & y\n",
     "print_truth_table(expr,props)\n"
@@ -301,6 +318,7 @@
    ],
    "source": [
     "# Disjunction Truth Table\n",
+    "# A disdjunction is true if either or both propositions are true\n",
     "props = x, y = symbols('x, y')\n",
     "expr = x | y\n",
     "print_truth_table(expr,props)\n"
@@ -325,6 +343,7 @@
    ],
    "source": [
     "# Implication Truth Table\n",
+    "# Implication is true in every situation EXCEPT when x is true and y is false\n",
     "props = x, y = symbols('x, y')\n",
     "expr = x >> y\n",
     "print_truth_table(expr,props)\n"
@@ -349,6 +368,7 @@
    ],
    "source": [
     "# Exclusive Disjunction Truth Table\n",
+    "# Xor is true when either proposition is true, but NOT when they are both true\n",
     "props = x, y = symbols('x, y')\n",
     "expr = Xor(x, y)\n",
     "print_truth_table(expr,props)\n"
@@ -385,77 +405,10 @@
    ],
    "source": [
     "# Truth Table for (y and z) or (not w and not x)\n",
+    "# As you can see, more propositions means more lines in the truth table\n",
     "props = w, x, y, z = symbols('w, x, y, z')\n",
     "expr = (y & z) | (~w & ~x)\n",
     "print_truth_table(expr, props)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "p\tq\tImplies(Implies(q, p), Implies(q, ~p))\n",
-      "F\tF\tTrue\n",
-      "F\tT\tTrue\n",
-      "T\tF\tTrue\n",
-      "T\tT\tFalse\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sympy import *\n",
-    "props = p, q = symbols('p, q')\n",
-    "exp = (q >> ~p) << (p << q)\n",
-    "\n",
-    "print_truth_table(exp, props)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "p\tq\tp | q\n",
-      "F\tF\tFalse\n",
-      "F\tT\tTrue\n",
-      "T\tF\tTrue\n",
-      "T\tT\tTrue\n",
-      "\n",
-      "p\tq\t~p\n",
-      "F\tF\tTrue\n",
-      "F\tT\tTrue\n",
-      "T\tF\tFalse\n",
-      "T\tT\tFalse\n",
-      "\n",
-      "p\tq\tImplies(p, q)\n",
-      "F\tF\tTrue\n",
-      "F\tT\tTrue\n",
-      "T\tF\tFalse\n",
-      "T\tT\tTrue\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "props = p,q = symbols('p,q')\n",
-    "exp = p | q\n",
-    "exp2 = ~p\n",
-    "exp3 = p>>q\n",
-    "print_truth_table(exp, props)\n",
-    "print()\n",
-    "print_truth_table(exp2, props)\n",
-    "print()\n",
-    "print_truth_table(exp3, props)\n",
-    "print()"
    ]
   },
   {
